--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
 
     compile 'com.estimote:sdk:0.13.0@aar'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
+    compile 'com.android.support:support-v4:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
 }
