--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.drbeacon" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.drbeacon">
 
-    <application
-        android:name="com.example.drbeacon.BeaconMonitorActivity"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+<application
+    android:name="com.example.drbeacon.BeaconMonitorActivity"
+    android:allowBackup="true"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:theme="@style/AppTheme">
+
+    <activity
+        android:name="com.example.drbeacon.SplashScreen"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.example.drbeacon.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        android:screenOrientation="portrait"
+        android:theme="@android:style/Theme.Black.NoTitleBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
 
+    <activity
+        android:name="com.example.drbeacon.MainActivity"
+        android:label="@string/app_name">
+
+    </activity>
+
+</application>
 </manifest>
