--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.drbeacon">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.drbeacon">
 
-<application
-    android:name="com.example.drbeacon.BeaconMonitorActivity"
-    android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:theme="@style/AppTheme">
-
-    <activity
-        android:name="com.example.drbeacon.SplashScreen"
+    <application
+        android:name=".BeaconMonitorActivity"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:screenOrientation="portrait"
-        android:theme="@android:style/Theme.Black.NoTitleBar">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".SplashScreen"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:name=".PatientRecords"
+            android:label="@string/title_activity_patient_records"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+    </application>
 
-    <activity
-        android:name="com.example.drbeacon.MainActivity"
-        android:label="@string/app_name">
-
-    </activity>
-
-</application>
 </manifest>
