--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.drbeacon">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>-->
+    <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission> -->
     <application
         android:name=".BeaconMonitorActivity"
         android:allowBackup="true"
@@ -18,19 +18,24 @@
             android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".PatientRecords"
             android:label="@string/title_activity_patient_records"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".CheckInActivity"
             android:label="@string/title_activity_check_in"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DoctorScreen"
+            android:label="@string/title_activity_doctor_screen"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
